# jobs-ai

./: README.md  config.py  dev_diary.md  git_log.txt  main.py  pyproject.toml
agents/: __init__.py  assessor.py  generator.py  profiler.py  reporter.py  scorer.py  searcher.py  skill_assessor.py
agents/prompts/: skill_assessor_prompts.py
agents/schemas/: skill_profile.py
config/: headers.py  paths.py  prompts.py  schemas.py  settings.py
docs/: frontend.md  pipeline-design-analysis.md  project_structure.md
frontend/: index.html  package-lock.json
frontend/scripts/: builder.js  navigation.js  navigator.js  rows.js  slider-rows.js  submit.js  submitter.js
frontend/src/: App.jsx
frontend/src/components/: Contact.jsx  ErrorBoundary.jsx  Hero.jsx  NavBar.jsx  QuestionSet.jsx  QuestionSetList.jsx  QuestionSets.jsx  Search.jsx
frontend/src/config/: api.js  constants.js  generalQuestions.js  questionSet.js  questionSetTitles.js  sliderData.js
frontend/src/scripts/: builder.js  navigator.js  submitter.js
frontend/src/styles/: App.css  contact.css  hero.css  index.css  nav.css  search.css  stylesheet.css
frontend/src/utils/: errorMessages.js  fileDownload.js  formDataTransform.js  labelRenderer.jsx  validation.js
frontend/styles/: stylesheet.css
src/jobsai/: main.py
src/jobsai/agents/: __init__.py  analyzer.py  (+6 more)
tests/: test_query_builder.py  test_scraper_duunitori.py
tests/fixtures/: duunitori_detail.html  duunitori_page_1.html
utils/: __init__.py  llms.py  normalization.py  query_builder.py  scraper_duunitori.py
utils/scrapers/: duunitori.py
(+19 files in other folders)
