[project]
name = "jobs-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "fastapi>=0.122.0",
    "langchain>=1.0.7",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
]
